# spotipy_top_song_weekly

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: run.py  util_functions.py
tests/: conftest.py  test_util_functions.py
