[tool.poetry]
name = "spotipy_top_song"
version = "0.1.0"
description = ""
authors = ["Jane Baxter"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
spotipy = "^2.20.0"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
